--- a/help/engl/Fehlerbehebung.html
+++ b/help/engl/Fehlerbehebung.html
@@ -3,14 +3,19 @@
 <head>
 
 
+
+  
   
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
+
   
 
 
   
-  <title>Fehlerbehebung</title>
+  
+  
+  <title>Troubleshooting</title>
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -32,120 +37,162 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Troubleshooting</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><span style="font-weight: bold;"><br>
+
 Playback does not work - I don't hear anything</span><br>
+
 
 
 <ul style="list-style-type: circle;">
 
 
+
   <li>Check the volume settings</li>
+
 
 
   <li>Connect all cables. Do other software have sound?</li>
 
 
+
   <li>Try another output device (<span style="font-style: italic;">Preferences -&gt; Player settings</span>)<br>
+
   </li>
+
 
 
   <li>After hibernating teh system, teh player may need to be reinitialized: <span style="font-style: italic;">Preferences -&gt; Hibernate/Stand by</span></li>
 
 
+
 </ul>
 
 
+
 <span style="font-weight: bold;">Nemp doesn't start<br>
+
 
 
 </span>
 <ul style="list-style-type: circle;">
 
 
+
   <li>On some systems the 3D-Coverflow may cause some issues.</li>
+
 
 
   <li>Use&nbsp;"<span style="font-style: italic;">NempSafemode.exe</span>" for starting Nemp. This will activate the old 2D-Coverflow</li>
 
 
+
 </ul>
+
 
 
 <span style="font-weight: bold;">Playback stutters</span><br>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>Enlarge the buffer size: <span style="font-style: italic;">Preferences -&gt; Player (extended)</span></li>
 
 
+
 </ul>
+
 
 
 <span style="font-weight: bold;">Playback is distorted</span><br>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>Check the Equalizer settings.</li>
 
 
+
   <li>Deactivate <span style="font-style: italic;">Floating Point Channels</span> or use <span style="font-style: italic;">Software Mixing</span>: <span style="font-style: italic;">Preferences -&gt; Player (extended)</span><br>
+
 
 
 ("Einstellungen -&gt; Erweiterte Einstellungen")</li>
 
 
+
 </ul>
+
 
 
 <span style="font-weight: bold;"></span><span style="font-weight: bold;">Multimedia keys don't work</span><br>
 
 
+
 <ul style="list-style-type: circle;">
 
 
+
   <li>Check settings <span style="font-style: italic;">Preferences -&gt; Controls (Media keys)</span><br>
+
   </li>
+
 
 
 </ul>
 
 
+
 <span style="font-weight: bold;"></span><span style="font-weight: bold;">The Coverflow shows only the default cover, but the player shows the correct ones</span><br>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>For a better performance, Nemp uses only&nbsp;cached images
@@ -156,19 +203,24 @@ like&nbsp;"BE321C7AE594416632C0C6024641B1D1.jpg". Nemp needs write
 access to this directory.</li>
 
 
+
   
 
 </ul>
+
 
 
 <span style="font-weight: bold;">The Coverflow doesn't find any cover art</span>
 <ul style="list-style-type: circle;">
 
 
+
   <li>Check <span style="font-style: italic;">Preferences -&gt; File management -&gt; Cover</span> and activate the online cover search</li>
 
 
+
   <li>Check your internet connection, firewall and so on</li>
+
 
 
   
@@ -176,25 +228,32 @@ access to this directory.</li>
   <li>The songs need to be tagged properly for an automatic cover search.</li>
 
 
-  <li>Cover search doesn't work well on sampler CDs, as the LastFM
+
+  <li>Cover search doesn't work well on sampler CDs, as the&nbsp;last.fm
 database is not very consistent in these cases. Sometimes an album is
 called "Bravo Hits 60", and the next one "Bravo Hits <span style="font-weight: bold;">Vol.</span> 61"...</li>
+
 
 
 </ul>
 
 
+
 <span style="font-weight: bold;">The Coverflow is only 2D, not 3D<br>
+
 
 
 </span>
 <ul style="list-style-type: circle;">
 
 
+
   <li>Probably you have started the <span style="font-style: italic;">NempSafemode.exe</span> once. This changes the Coverflow permanently.</li>
 
 
+
   <li>Uncheck <span style="font-style: italic;">Preferences -&gt; Viewing Options -&gt; Coverflow -&gt; use classic Coverflow</span>&nbsp;</li>
+
 
 
   <li>Nemp needs for the 3D-Cowerflowthe files OpenGL32.dll
@@ -202,90 +261,119 @@ und GLU32.dll,
 which should be located in your system directory.</li>
 
 
+
   <li>Try to update the driver of your video card.</li>
+
 
 
   
 
 </ul>
+
 
 
 <span style="font-weight: bold;">I use Windows 7, but I dont see any buttons in the Taksbar</span><br>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>use a setting without a (*) at <span style="font-style: italic;">Preferences -&gt; General settings -&gt; taskbar and tray</span></li>
 
 
+
 </ul>
+
 
 
 <span style="font-weight: bold;">The Deskband doesn't work</span><br>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>After installing the Deskband, you need to log off once to activate the deskband.</li>
 
 
+
   
 
 </ul>
+
 
 
 <span style="font-weight: bold;">Webradio doesn't work: "Unknown format"</span><br>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>try to get another URL for the Webstream. If available, the Link for "Winamp" should work with Nemp.</li>
 
 
+
   <li>Activate "Parse Stream-Playlist" at <span style="font-style: italic;">Preferences -&gt; Player settings -&gt; Webstreams</span></li>
 
 
+
 </ul>
+
 
 
 <span style="font-weight: bold;">I can't record Webstreams</span><br>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>Recording of webstreams works only for mp3- and aac encoded streams.</li>
 
 
+
 </ul>
+
 
 
 <span style="font-weight: bold;">When recording webstreams, I get only one huge file</span><br>
 
 
+
 <ul style="list-style-type: circle;">
 
 
+
   <li>Activate setting "save different titles in seperate files"</li>
+
   <li>This only works, if the the stream contains metadata for the title. Many stations add proper metadata, some don't.</li>
+
 
 
 </ul>
 
 
+
 <span style="font-weight: bold;"></span><span style="font-weight: bold;">Scrobble doesn't work</span><br>
+
 
 
 <ul style="list-style-type: circle;">
 
 
+
   <li>You need an account on last.fm</li>
 
 
+
   <li>Check your internet connection and firewall settings</li>
+
 
 
   
@@ -293,8 +381,10 @@ which should be located in your system directory.</li>
 </ul>
 
 
+
 <span style="font-weight: bold;"></span>
 <br>
+
 
 
 </body>
