--- a/help/engl/medienbib_cloudeditor.html
+++ b/help/engl/medienbib_cloudeditor.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <title>The Tagcloud Editor</title>
+
+  
 
 
+  
+  <title>The tag cloud editor</title>
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -23,97 +28,132 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
-      <h2 class="head">The Tagcloud Editor</h2>
+      
+      <h2 class="head">The tag cloud editor</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
-If you use LastFM for getting additional tags for the tracks in your
+
+If you use&nbsp;last.fm for getting additional tags for the tracks in your
 library, you may get some useless tags, or identical tags with
 different spellings. <br>
 
-<br>
-
-With the tagcloud editor you can clean up this mess a little bit.<br>
 
 <br>
+
+
+With the<span style="font-style: italic;"> tag cloud editor</span>
+you can clean up this mess a little bit.<br>
+
+
+<br>
+
 
 <span style="font-weight: bold;">Existing tags</span><br>
 
+
 A list of all (really all) tags in your library. From popular ones as
-"Singer-Songwriter" to very exotic ones like "songs
+"Singer-Songwriter" to very exotic ones like "songs,
 die so gut sind das ich meiner oma ihr klein haeuschen zwar nicht
 verkaufen aber zumindest dafuer beleihen wuerde". (The last one
 actually exists, and translates to "songs which are that good, that I
 won't sell my grandma's cottage for it, but maybe hypothecate it").<br>
 
+
 You can rename these tags, merge or delete them. Just select one ore
 more tags and click the appropriate button.<br>
 
+
 <br>
+
 
 The setting <span style="font-weight: bold;">"Hide
-Auto-Tags"</span> will hide tags, taht Nemp created on its own
+Auto-Tags"</span> will hide tags, that Nemp created on its own
 (like Artist, Album, Year, Genre, Decade). You cannot change these tags
-completely. However you can change these tags for files, for which Nemp
+completely. However you can change these tags for files, where Nemp
 did not automatically created them.<br>
 
+
 <br>
+
 
 The setting <span style="font-weight: bold;">"Remember
 merged/renamed/deleted tags"</span> will save your input, so that
-following queries to LastFM will be automatically corrected.<br>
+following queries to LastFM will be automatically corrected.<span style="font-weight: bold;"><br>
 
-<span style="font-weight: bold;"><br>
 
-Example:</span> You merge the two tags "Female Vocalist" and
-"Female Vocalist<span style="font-weight: bold;">s</span>"
+</span><span style="font-style: italic;">Example:
+You merge the two tags "Female Vocalist" and
+"Female Vocalist</span><span style="font-weight: bold; font-style: italic;">s</span><span style="font-style: italic;">"
 to "Female Vocalists". If a later query to LastFM replies "Female
-Vocalist", this tag will automatically be changed to "Female Vocalists"<br>
+Vocalist", this tag will automatically be changed to "Female Vocalists".</span><br>
+
 
 <br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Merged/renamed tags</span><br>
 
-A list of all modified tags. This is the list Nemp uses to adapt the
-LastFM replies.<br>
+
+A list of all modified tags. This is the list Nemp uses to adapt the&nbsp;last.fm replies.<br>
+
 
 <br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Deleted Tags</span><br>
 
-Tags, you don't want to see in your tagcloud. If LastFM reply contains
+
+Tags, you don't want to see in your tag cloud. If&nbsp;last.fm reply contains
 one of these tags, it is just ignored.<br>
 
-<br>
 
 <br>
 
-<span style="font-weight: bold;">Update Files now</span><br>
+
+<br>
+
+
+<span style="font-weight: bold;">Update files now</span><br>
+
 
 After renaming/merging/deleting tags, you should change the tags in
-your mp3-files as well. This may take a while - probably a little bit
+your mp3-files as well. This may take some time - probably a little bit
 longer than reading the information while scanning your harddrive for
 new files.<br>
+
 
 <span style="font-weight: bold;"></span>
 </body>
