--- a/help/engl/nemp_anzeige_dateidetails.html
+++ b/help/engl/nemp_anzeige_dateidetails.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+  
+
+
+  
   <title>Properties, File Details</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -23,94 +28,127 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
-      <h2 class="head">Properties, File Details</h2>
+      
+      <h2 class="head">Properties, file details</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
+
 When you select a file in the playlist or in the media library, you can
-choose "Properties" from the context menu. There you can see more
+choose "<span style="font-style: italic;">Properties</span>" from the context menu. There you can see more
 detailed information about the file.<br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">General</span><br>
 
+
 On the first page you can find the information stored in the media
-library for this file. Through the button "Explorer" you can open the
-file in the Windows Explorer, and throught the button "Properties" you
+library for this file. Through the button "<span style="font-style: italic;">Explorer</span>" you can open the
+file in the Windows Explorer, and throught the button "<span style="font-style: italic;">Properties</span>" you
 will get the Windows-Property dialog for this file.<br>
 
-Via "Refresh" Nemp will reread the ID3-Tags (or other types of
-metadata) and refresh the stored information in the media library.<br>
+
+Via "<span style="font-style: italic;">Refresh</span>" Nemp will reread the ID3-Tags (or other types of
+meta data) and refresh the stored information in the media library.<br>
+
 
 Additionally you can see all the images Nemp has found for this file on
-your harddisk. A Doubleclick on the image will open it in your
-defaultimage viewer.<br>
+your harddisk. A double click on the image will open it in your
+default image viewer.<br>
+
 
 <br>
+
 
 <span style="font-weight: bold;">Id3-Tags (mp3) / Vorbis
 Comments (ogg, flac) / ...</span><br>
 
+
 The second page gives you a more detailed view on the file. Note that
-not all types of audio files supports metadata (e.g. wav) and that Nemp
-does not support all types of metadata (e.g. wma). Right now Nemp
+not all types of audio files supports meta data (e.g. wav) and that Nemp
+does not support all types of meta data (e.g. wma). Right now Nemp
 supports ID3-Tags (found in mp3 files), Ogg-Vorbis (*.ogg), Flac-
 Comments (*.flac), Apev2-Tags (e.g. *.ape, *.mpc) and iTunes-Tags
 (*.m4a).<br>
 
+
 You can edit the information, which is written into the file after
 click on the button "Apply".<br>
 
-The button "Reset rating" will reset the rating of the file back to 0,
+
+The button "<span style="font-style: italic;">Reset rating</span>" will reset the rating of the file back to zero,
 which will appear as 2.5 stars. In case the rating of the
 file&nbsp;in the media library is different from the rating stored
 in the metadata of the file, you will see a button to synchronize the
 rating.<br>
 
+
 <br>
 
+
 <span style="font-weight: bold;">Lyrics &amp; Pictures</span><br>
+
 
 Nemp can store lyrics and cover art directly into the file (cover art
 not supported for *.ogg). The lyrics can be downloaded from
 lyrics.wikia.com automatically, or (if theyare not available there)
 edited manually.<br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">MP3- and ID3-Details</span><br>
 
-This is some nerdy stuff. Only the ID3v2-Version may be of interest. If
-it is 2.4.0, Windows may have some problems reading the metadata from
+
+This is some nerdy stuff, only the ID3v2-Version may be of interest. If
+it is 2.4.0, Windows may have some problems reading the meta data from
 the file. Most of the mp3-files should have the version 2.3.0.<br>
 
+
 <br>
 
-<span style="font-weight: bold;">Tags for tagcloud<br>
 
-</span>Nemp can store additional Tags in to the file, which may
-not be useful for other players. These "Additional Tags" are used for
-the tagcloud. You may enter some alternative genres, or personal
+<span style="font-weight: bold;">Tags for tag cloud<br>
+
+
+</span>Nemp can store additional tags into the file, which may
+not be useful for other players. These "<span style="font-style: italic;">Additional tags</span>" are used for
+the tag cloud. You may enter some alternative genres, or personal
 information as "Holiday 2011/12". <br>
 
+
 <br>
+
 
 </body>
 </html>
