--- a/help/engl/optionen_7_Ansicht.html
+++ b/help/engl/optionen_7_Ansicht.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Display</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,77 +31,106 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Display</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 Configure what (and how) information is displayed.
 <ul style="list-style-type: circle;">
 
+
   <li>Selection of the visible columns in the title list of the
 media library<br>
+
 
     <span style="font-style: italic;">Tip: You can change
 the selection also by right click on the column header</span></li>
 
+
   <li>Sort order for browsing the media library</li>
+
 
   <li>Sort title list always (or not)</li>
 
+
 </ul>
 
-<h3>Party mode</h3>
 
-Some time ago, somebody mailed me, that Nemp is a wonderful player for
+<h3>Party mode</h3>
+A few years ago somebody mailed me, that Nemp is a wonderful player for
 parties, as everybody can understand the GUI very fast. But the buttons
 are getting smaller and smaller after a few beers and become harder to
 hit...<br>
 
+
 <br>
+
 
 So, in party mode the buttons are larger, and some features are blocked
 (e.g. to avoid deleting the library).<br>
 
+
 <br>
 
+
 <span style="font-style: italic;">Tip: Lock the Nemp-PC on
-a party, and offer your guests access to the player by the Nemp <a href="webserver.html">webservers</a>. For a detailed
-manual including a local wifi network, please visit www.gausi.de</span><br>
+a party, and offer your guests access to the player by the Nemp <a href="webserver.html">webserver</a>. For a detailed
+manual including setup of a local wifi network, please visit www.gausi.de</span><br>
+
 
 <h3>Extended settings</h3>
+
 
 <span style="font-weight: bold;">Player and cover art:</span>
 Customize the scrolling speed, the position of the cover art in the
 title list of the media library and&nbsp;enable the 2D fallback
 coverflow.<br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Fonts:</span> Some
 ancient settings from the first versions of this software. <br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Extended viewing settings:</span>
 Some more settings (yes, I like settings).<br>
 
+
 <br>
+
 
 </body>
 </html>
