--- a/help/engl/player_controls.html
+++ b/help/engl/player_controls.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 
+
+
+  
+  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+
+  
+
+
+  
+  
+  
   <title>Display /Controls of the Player</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,221 +36,412 @@ font-size: 12px;
 
 <body>
 
+
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
+
 
   <tbody>
 
+
+
     <tr>
+
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
+
       <td>
-      <h2 class="head">Display /Controls of the Player</h2>
+      
+      
+      <h2 class="head">Display / Controls of the player</h2>
+
+
 
       </td>
 
+
+
     </tr>
 
+
+
+  
+  
   </tbody>
 </table>
 
+
+
 <hr style="width: 100%; height: 2px;"><br>
+
+
 
 <div style="text-align: center;"><img style="width: 232px; height: 134px;" alt="player" src="player.jpg"><br>
 
+
+
 </div>
+
+
 
 <br>
 
+
+
 <span style="font-weight: bold;">Title display<br>
 
+
+
 </span><span style="font-style: italic;">Tip:
-Switch between some display modes by clicking on the title:</span><span style="font-weight: bold; font-style: italic;"></span>
+Switch between&nbsp;display modes by clicking&nbsp;the title:</span><span style="font-weight: bold; font-style: italic;"></span>
 <ul style="list-style-type: circle; font-style: italic;">
+
+
 
   <li>Display of "Artist - Title" (as it appears in the playlist)</li>
 
+
+
   <li>Display of the filename, including the complete path</li>
 
-  <li>Addiotional information like bitrate, samplerate, duration</li>
+
+
+  <li>Additional information like bitrate, samplerate, duration</li>
+
+
 
   <li>Lyrics (if existing)</li>
 
+
+
 </ul>
 
-<span style="font-weight: bold;">Rating</span><br>
+
+
+<span style="font-weight: bold;">Rating (stars)</span><br>
+
+
 
 <span style="font-style: italic;">Tip: Rate the current
 title with a single click.</span><br>
 
+
+
 <br>
+
+
 
 <span style="font-weight: bold;">Display of activated
 tools (not visible in the image above)</span><br>
 
-Je nachdem welche Tools gerade aktiv sind, werden unter den
-Sternchen weitere Symbole eingeblendet.<br>
+If you use some of the Nemp tools, a matching icon will be shown below the rating stars.<br>
+
+
 
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 
+
+
   <tbody>
 
+
+
     <tr>
+
+
 
       <td style="width: 30px;"><img style="width: 16px; height: 16px;" src="shutdown.png" alt="disabled"></td>
 
-      <td>The countdown to <a href="herunterfahren.html">shutdown</a>
-is active. What kind of shutdown has been selected is shown in the hint
+
+
+      <td>The countdown to shutdown
+is active. What kind of shutdown (close Nemp, suspend, hibernate, shutdown) has been selected is shown in the hint
 text (point on the icon for a second or two).&nbsp;</td>
+
+
 
     </tr>
 
+
+
     <tr>
+
+
 
       <td style="width: 30px;"><img style="width: 16px; height: 16px;" src="geburtstag.png" alt="disabled"></td>
 
+
+
       <td>The <a href="geburtstagsmodus.html">Birthday
 mode</a>
-is active. Nemp will interrupt the playlist at the given time for a
-"Hapy Birthday".</td>
+is active. Nemp will suspend the playlist at the given time for a
+"Happy Birthday".</td>
+
+
 
     </tr>
 
+
+
     <tr>
 
+
+
       <td><img style="width: 16px; height: 16px;" src="webserver.png" alt=""></td>
+
+
 
       <td>The&nbsp;<a href="webserver.html">Nemp
 webserver</a>
 is active to grant access to the media library and the player through a
 webbrowser (e.g. choose the next track to play through your smartphone)</td>
 
+
+
     </tr>
+
+
 
     <tr>
 
+
+
       <td><img style="width: 16px; height: 16px;" src="scrobbler.png" alt=""></td>
+
+
 
       <td><a href="scrobbeln.html">Scrobbling</a>
 is active. The songs you are currently listening to are shared with
-your friends on LastFM.<br>
+your friends on&nbsp;last.fm.<br>
+
+
 
       </td>
 
+
+
     </tr>
 
+
+
+  
+  
   </tbody>
 </table>
 
+
+
 <br>
+
+
 
 <span style="font-weight: bold;">Time display</span><br>
 
+
+
 <span style="font-style: italic;">Tip: Switch between
-"time" and "time remaining" by clicking on the time.</span><span style="font-weight: bold;"></span><br>
+"time" and "time remaining" by clicking.</span><span style="font-weight: bold;"></span><br>
+
+
 
 <br>
+
+
 
 <span style="font-weight: bold;">Volume control</span><br>
 
-Click&amp;Drag the vertical slider.<br>
+
+
+Click&amp;Drag the vertical slider to change the volume of the plyback<br>
+
+
 
 <br>
+
+
 
 <span style="font-weight: bold;">Progress control</span><br>
 
+
+
 Click&amp;Drag the horizontal slider.<br>
+
+
 
 <br>
 
-<h3>Control of the Player<span style="font-weight: bold;"></span></h3>
+
+
+<h3>Control of the player<span style="font-weight: bold;"></span></h3>
+
+
 
 <span style="font-style: italic;">Tip: Some buttons have
 more than one function. Try the right mouse button for context menus!</span><br>
 
-<br>
 
-<span style="font-weight: bold;">Play order</span><br>
 
 <br>
+
+
+
+<span style="font-weight: bold;">Playback order</span><br>
+
+
+
+<br>
+
+
 
 <img src="BtnRandom.png" alt=""><br>
 
+
+
 <br>
+
+
 
 The four symbols indicate<br>
 
+
+
 <ul style="list-style-type: circle;">
 
+
+
   <li>Repeat everything. Nemp will play every title in the
-playlist and repeat after the last one</li>
+playlist and repeat from the beginning after the last one.</li>
+
+
 
   <li>Repeat current track: Only the current track is repeated in
-a loop</li>
+a loop.</li>
+
+
 
   <li>Random mode: The tracks in the playlist a played randomly. <span style="font-style: italic;">Note: In the extended playlist
 settings you can adjust between "really random" (which means that a
 song can be played twice within a short time) or "Avoid repetitions"
 (which means if a song was played, it is blocked for some time).</span></li>
 
+
+
   <li>Repeat off: Nemp will play every title in the playlist and
 stop after the last one.</li>
 
+
+
 </ul>
+
+
 
 <span style="font-weight: bold;">Recording</span><br>
 
+
+
 <br>
+
+
 
 The record button is only accessible on mp3-webstreams.<br>
 
+
+
 <br>
+
+
 
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 
+
+
   <tbody>
+
+
 
     <tr>
 
+
+
       <td style="width: 30px;"><img style="width: 18px; height: 18px;" src="BtnRecord.png" alt="disabled"></td>
+
+
 
       <td>Recording not possible (either you are playing a local
 file, or the codec is not supported for recording).</td>
 
+
+
     </tr>
 
+
+
     <tr>
+
+
 
       <td><img style="width: 18px; height: 18px;" src="BtnRecord_1.png" alt=""></td>
 
-      <td>Recording is possible. Click on the button to begin
+
+
+      <td>Recording is possible. Click&nbsp;the button to begin
 with recording the current webstream.</td>
 
+
+
     </tr>
+
+
 
     <tr>
 
+
+
       <td><img style="width: 18px; height: 18px;" src="BtnRecord_2.png" alt=""></td>
 
-      <td>Nemp is recording the current stream. Click on the
+
+
+      <td>Nemp is recording the current stream. Click&nbsp;the
 button to stop.<br>
+
+
 
       </td>
 
+
+
     </tr>
 
+
+
+  
+  
   </tbody>
 </table>
 
+
+
 <br>
+
+
 
 The recording is saved into the directory given in the webradio
 settings. You can open it through the menu "Tools -&gt; Directories
 -&gt; Recordings".<br>
 
-<br>
+
 
 <br>
+
+
+
+<br>
+
+
 
 </body>
 </html>
