--- a/help/engl/scrobbeln.html
+++ b/help/engl/scrobbeln.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 
+
+
+  
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+
+  
+
+
+  
+  
+  
   <title>Scrobble with Nemp</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,103 +36,184 @@ font-size: 12px;
 
 <body>
 
+
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
+
 
   <tbody>
 
+
+
     <tr>
+
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
+
       <td>
+      
+      
       <h2 class="head">Scrobble with Nemp</h2>
+
+
 
       </td>
 
+
+
     </tr>
 
+
+
+  
+  
   </tbody>
 </table>
 
+
+
 <hr style="width: 100%; height: 2px;"><br>
 
-To Scrobble is a concept of LastFM - a social network with focus on
-music. Scrobling means, to&nbsp;share the information what you are
-currently listening to with your friends. LastFM will analyse your
-taste of music and recommends other users with a similar one.<br>
+
+
+<span style="font-style: italic;">To scrobble</span> is a concept of&nbsp;last.fm - a social network with focus on
+music. Scrobling means to&nbsp;share the information what you are
+currently listening to with your friends.&nbsp;last.fm will then analyse your
+taste of music and recommends you other users with a similar one to find more music you may enjoy.<br>
+
+
 
 <br>
+
+
 
 You can scrobble with Nemp.<br>
 
-<br>
+
 
 <br>
+
+
+
+<br>
+
+
 
 <span style="font-weight: bold;">Configure Nemp for
 scrobbling</span><br>
 
-At first Nemp needs access to your user profile on LastFM: Choose
-Settings -&gt; LastFM and click the Button "Start" and follow the
+
+
+At first Nemp needs access to your user profile on&nbsp;last.fm: Choose
+<span style="font-style: italic;">Settings -&gt;&nbsp;last.fm</span> click the button "<span style="font-style: italic;">Start</span>", and follow the
 instructions.<br>
+
+
 
 <br>
 
+
+
 <span style="font-weight: bold;">Activate scrobbling</span><br>
 
-Within teh settings dialog you can choose to scrobble just the current
+
+
+Within the settings dialog you can choose to scrobble just the current
 session (scrobble until you close Nemp), or to scrobble always.
 Scrobbling will start after click on the "Ok" button.<br>
+
+
 
 When Nemp is scrobbling your playlist, there will be an icon <img style="width: 16px; height: 16px;" src="scrobbler.png" alt=""> in the main window. You can stop scrobbling by a
 click on this icon.<br>
 
+
+
 <br>
+
+
 
 <span style="font-weight: bold;">What does Nemp do while
 scrobbling?</span><br>
 
-Scrobbling consists of to stages.<br>
+
+
+Scrobbling consists of two stages.<br>
+
+
 
 <ul style="list-style-type: circle;">
 
-  <li>The "Now-Playing"-message. Every time a new track starts,
-nemp will notify LastFM. On your LastFM profile will appear something
-like&nbsp;"currently listens to&nbsp;&lt;current
+
+
+  <li>The "<span style="font-style: italic;">Now-Playing</span>"-message. Every time a new track starts, Nemp will notify&nbsp;last.fm. On your LastFM profile will appear something
+like&nbsp;"&lt;your name&gt; currently listens to&nbsp;&lt;current
 track&gt;".</li>
 
-  <li>The "Submission"-Message. This notification is sent at the
-end of a track. Note that Nemp will only "submit" the track, if at
+
+
+  <li>The "<span style="font-style: italic;">Submission</span>"-Message.
+This notification is sent at the
+end of a track.&nbsp;Nemp will only "submit" the track, if at
 least 50% (or 4 minutes, whatever occurs first) of the track has been
-played. Short tracks (less than 30 seconds) are completely&nbsp;
-ignored. After a submit the track will appear in your history on LastFM.</li>
+played (as it is recommended by&nbsp;last.fm). Short tracks (less than 30
+seconds) are completely ignored. After a submit the track will appear
+in your history on&nbsp;last.fm.</li>
+
+
 
 </ul>
 
+
+
 <span style="font-weight: bold;">Troubleshooting</span><br>
+
+
 
 Sometimes scrobbling doesn't work properly. Nemp will stop scrobbling
 in these cases.
 Possible error sources are<br>
 
+
+
 <ul style="list-style-type: circle;">
+
+
 
   <li>No internet connection</li>
 
-  <li>A firewall is blocking Nemp</li>
 
-  <li>The LastFM session key is invalid. You should restart the
+
+  <li>A&nbsp;firewall is blocking Nemp</li>
+
+
+
+  <li>The&nbsp;last.fm session key is invalid. You should restart the
 configuration to get a new session key.</li>
 
-  <li>Your account was blocked. You should contact LastFM for
+
+
+  <li>Your account was blocked. You should contact&nbsp;last.fm for
 further assistance.</li>
+
+
 
 </ul>
 
+
+
 When you think, that you have fixed the source of error, you can click
-on "Scrobble again" in the settings dialog to try again..<br>
+on "<span style="font-style: italic;">Scrobble again</span>" in the settings dialog to try again.<br>
+
+
 
 <br>
+
+
 
 </body>
 </html>
