--- a/help/engl/nemp_basics.html
+++ b/help/engl/nemp_basics.html
@@ -2,20 +2,10 @@
 <html>
 <head>
 
-
-
-  
-  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+  <title>Basics</title>
 
 
-  
-
-
-  
-  
-  
-  <title>Grundlagen</title>
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -36,219 +26,147 @@ font-size: 12px;
 
 <body>
 
-
-
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-
-
 
   <tbody>
 
-
-
     <tr>
-
-
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
-
-
       <td>
-      
-      
       <h2 class="head">Basics</h2>
-
-
 
       </td>
 
-
-
     </tr>
 
-
-
-  
-  
   </tbody>
 </table>
 
-
-
 <hr style="width: 100%; height: 2px;"><br>
-The basic concept of Nem p is as follows:<br>
+
+The basic concept of Nemp is as follows:<br>
 
 <ol>
 
-  <li>There is one playlist. Not two ore three, only one. The items in this playlist will be played one after the other, or randomly.</li>
+  <li>There is one <span style="font-style: italic;">playlist</span>.
+Not two ore three, only one. The items in this playlist will be played
+one after the other, or randomly.</li>
 
-  <li>The Media Library manages all your audio files. You can browse in the library, or search for a specific title.</li>
+  <li>The <span style="font-style: italic;">media
+library</span> manages all your audio files. You can browse in
+the media library, or search for a specific title.</li>
 
 </ol>
-The philosophy behind Nemp is <span style="font-style: italic;">KISS - Keep it simple, stupid!</span><br>
 
-<br>
-New features will be implemented, if (and only if) the basic handling won't become more confusing ore complicated by them.<br>
-<br>
-The nemp window consists of four parts.<br>
-
-
+The philosophy behind Nemp is <span style="font-style: italic;">KISS
+- Keep it simple, stupid!</span><br>
 
 <br>
 
+New features will be implemented, if (and only if) the basic handling
+won't become more confusing ore complicated by them.<br>
 
+<br>
+
+The Nemp window consists of four parts.<br>
+
+<br>
 
 <div style="text-align: center;"><img style="width: 398px; height: 298px;" alt="player" src="nemp_start.jpg"><br>
 
-
-
 </div>
-
-
 
 <br>
 
-
-
 <span style="font-weight: bold;">1. The Player<br>
 
-
-
-</span>The center part is the actual player. On the top you will find
+</span>The center part is the actual player. On the top you will
+find
 the usual control and display elements. Below that part some addtional
 information is shown (like cover art or lyrics), or additional controls
 (like equalizer, effects, headphones).<br>
 
-
-
-<span style="font-style: italic;">Tip: Just click the big Play-Button </span><img style="width: 30px; height: 30px; font-style: italic;" alt="play" src="BtnPlay.png" align="middle"><span style="font-style: italic;"> to start playing some files.</span><br>
-
-
+<span style="font-style: italic;">Tip: Just click the big
+Play-Button </span><img style="width: 30px; height: 30px; font-style: italic;" alt="play" src="BtnPlay.png" align="middle"><span style="font-style: italic;"> to start playing some files.</span><br>
 
 <br>
-
-
 
 <span style="font-weight: bold;">2. The Playlist</span><br>
-Display of the current playlist. click on the button <img style="width: 24px; height: 24px;" alt="menu" src="TabBtnNemp.png" align="middle"> for the playlist menu.<br>
 
+Display of the current playlist. Click on the button <img style="width: 24px; height: 24px;" alt="menu" src="TabBtnNemp.png" align="middle"> for the playlist
+menu.<br>
 
-
-<span style="font-style: italic;">Tip: Try Drag&amp;Drop to fill the playlist.</span><br>
-
-
+<span style="font-style: italic;">Tip: Try
+Drag&amp;Drop to fill the playlist.</span><br>
 
 <br>
 
-
-
 <span style="font-weight: bold;">3. Media Library, overview</span><br>
-The media library manages your audio files. You can browse your library by three different ways:<br>
 
-
+The media library manages your audio files. You can browse your library
+by three different ways:<br>
 
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 
-
-
   <tbody>
 
-
-
     <tr>
-
-
 
       <td style="width: 30px;"><img style="width: 24px; height: 24px;" src="TabBtnClassic.png" alt="classic"></td>
 
-
-
-      <td>Classic view. The library is sorted by the selected criterias, e.g. Artist and Album.<br>
-
-
+      <td><span style="font-style: italic;">Classic
+view</span>. The library is sorted by the selected criteria, e.g.
+Artist and Album.<br>
 
       </td>
 
-
-
     </tr>
 
-
-
     <tr>
-
-
 
       <td style="width: 30px;"><img style="width: 24px; height: 24px;" src="TabBtnCoverflow.png" alt="coverflow"></td>
 
-
-
-      <td>Coverflow. The albums in your library are shown in a coverflow.</td>
-
-
+      <td><span style="font-style: italic;">Coverflow</span>.
+The albums in your library are shown in a coverflow.</td>
 
     </tr>
-
-
 
     <tr>
 
-
-
       <td><img style="width: 24px; height: 24px;" src="TabBtnTagCloud.png" alt="tagcloud"></td>
 
-
-
-      <td>Tagcloud. All the tags in your library are organized in a tagcloud.</td>
-
-
+      <td><span style="font-style: italic;">Tag cloud</span>.
+All the tags in your library are organized in a tag cloud.</td>
 
     </tr>
 
-
-
-  
-  
   </tbody>
 </table>
 
-
-
 <span style="font-style: italic;"><br>
 
-
-
-Tip:&nbsp;Drag&amp;Drop your "Music folder" here to start building your library.</span><br>
-
-
+Tip:&nbsp;Drag&amp;Drop your "music folder" here to start
+building your library.</span><br>
 
 <br>
 
+<span style="font-weight: bold;">4. Media libray</span><span style="font-weight: bold;">, </span><span style="font-weight: bold;">title list</span><br>
 
-
-<span style="font-weight: bold;">4. Media Libray</span><span style="font-weight: bold;">, </span><span style="font-weight: bold;">title list</span><br>
 The bottom part of the Nemp window shows all titles of your library,
 that matches the current selection in the overview part (3), or - after
 using the quicksearch - the current search results. <br>
 
-
-
-<span style="font-style: italic;">Tip: Try Drag&amp;Drop from here to the playlist. Or drag some files&nbsp;to the Windows Explorer to copy some files.</span><span style="font-weight: bold;"></span><br>
-
-
+<span style="font-style: italic;">Tip: Try
+Drag&amp;Drop from here to the playlist. Or drag some
+files&nbsp;to the Windows Explorer to copy some files.</span><span style="font-weight: bold;"></span><br>
 
 <br>
 
-
-
 <br>
-
-
 
 <span style="font-weight: bold;"></span><br>
-
-
 
 </body>
 </html>
