--- a/help/engl/nemp_tagcloud.html
+++ b/help/engl/nemp_tagcloud.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 
+
+
+  
+  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+
+  
+
+
+  
+  
+  
   <title>The Nemp tag cloud</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -23,92 +33,166 @@ font-size: 12px;
 
 <body>
 
+
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
+
 
   <tbody>
 
+
+
     <tr>
+
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
+
       <td>
+      
+      
       <h2 class="head">The Nemp tag cloud</h2>
+
+
 
       </td>
 
+
+
     </tr>
 
+
+
+  
+  
   </tbody>
 </table>
 
+
+
 <hr style="width: 100%; height: 2px;"><br>
+
+
 
 <div style="text-align: center;"><img style="width: 378px; height: 245px;" alt="tagcloud" src="browse_tagwolke.jpg"><br>
 
+
+
 </div>
 
+
+
 <br>
+
+
 
 The tag cloud is (as far as I know) something new for mp3 players.
 Whether it is useful or not is up to you.<br>
 
-<br>
+
 
 <br>
+
+
+
+<br>
+
+
 
 <span style="font-weight: bold;">Basic idea</span><br>
 
+
+
 Properties like artist, album, genre, date and decade from the audio
-files will be collected into one big list. The most common used "tags"
+files will be collected into one big list. The most common used of these "tags"
 will be displayed in a tag cloud, as it is known from many websites.<br>
 
+
+
 You can then select a tag (e.g. "90s" or "pop"), and Nemp will show you
-all titles from 1990 to 1999, or all titles tagged with "pop". When you
-double click a tag, Nemp will crete a new tag cloud limited to the
+all titles from 1990 to 1999 (all titles tagged with "pop"). When you
+double click a tag, Nemp will create a new tag cloud limited to the
 files that are tagged with the selected one.<br>
+
+
 
 <br>
 
+
+
 <span style="font-weight: bold;">Additional tags</span><br>
+
+
 
 The tag cloud becomes more interesting, when you use additional tags
 (i.e. not only artist-album-genre-date). Nemp can store (almost) any
-number of&nbsp; additional tags. These tags have no special meaning
+number of&nbsp;additional tags. These tags have no special meaning
 (like "artist"), but are just used to describe the track a little bit
 more detailed. You can add some alternate genres, or personal tags like
 "just wunderful" or "beach holiday 2012".<br>
 
+
+
 <br>
+
+
 
 <div style="text-align: center;">&nbsp;<img style="width: 425px; height: 225px;" alt="tags" src="tags.jpg"><br>
 
+
+
 </div>
 
+
+
 <br>
+
+
 
 It would be a lot of work to do this for every single file. Therefore:<br>
 
+
+
 <br>
 
-<span style="font-weight: bold;">Tags from LastFM</span><br>
 
-Nemp can use the LastFM database to get additional tags for your audio
-files. These tags are set by the LastFM community and are quite useful
-in most cases. Choose from the menu "Medialibrary -&gt; Get
-additional tags for selected files".<br>
+
+<span style="font-weight: bold;">Tags from last.fm</span><br>
+
+
+
+Nemp can use the&nbsp;last.fm database to get additional tags for your audio
+files. These tags are set by the&nbsp;last.fm community and are quite useful
+in most cases. Choose from the menu "<span style="font-style: italic;">Media library -&gt; Get
+additional tags for selected files</span>".<br>
+
+
 
 <span style="font-style: italic;">Note 1: This will only
 work, if the default tags (artist, title) are already set.<br>
 
-Note 2: This will take some time. LastFM allows only a few queries per
+
+
+Note 2: This will take some time.&nbsp;last.fm allows only a few queries per
 second. If Nemp would use as many queries as your internet connection
 can handle, Nemp will permanently be blocked from using this service.</span><span style="font-style: italic;"></span><br>
 
-<br>
+
 
 <br>
 
+
+
 <br>
+
+
+
+<br>
+
+
 
 </body>
 </html>
