--- a/help/engl/optionen_c_medienbibliothek.html
+++ b/help/engl/optionen_c_medienbibliothek.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>File management</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,124 +31,171 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">File management</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 Configure the media library.<br>
 
+
 <br>
 
+
 <span style="font-weight: bold;">Directories</span><br>
+
 
 Nemp can scan your music directories for new files on every start to
 keep your media library up-to-date.<br>
 
+
 <ul style="list-style-type: circle;">
+
 
   <li><span style="font-style: italic;">Automatically
 monitor new directories</span>: Whenever you add a directory to
 your library (e.g. by dropping it from the Windows explorer), this
 directory will be added to this list.</li>
 
+
   <li><span style="font-style: italic;">Show query
 dialog when adding new directories</span> will show
 a&nbsp;dialog whether Nemp should monitor this directory or not.</li>
 
+
 </ul>
+
 
 <br>
 
+
 <span style="font-weight: bold;">Filetypes for the library</span><br>
+
 
 Nemp is able to play a lot of filetypes, but some of them can not be
 analyzed for the media library. Therefore you can choose the filetypes
 you want to add to the library.&nbsp;<br>
 
+
 <span style="font-style: italic;">Tip: Nemp can handle
 very well the following types: mp3, ogg, flac, m4, ape, mpc, ofr, wv
-and tta. Windows Media Audio (wma) is not fully supported</span><span style="font-style: italic;">.</span><br>
+and tta. Windows Media Audio (wma) is not fully supported</span><span style="font-style: italic;">.<br>
+Note: Although *.cda (dummy files for CD-Digital Audio) is listed here, these files are NOT included into the library.&nbsp;<br>
+</span>
 
 <br>
+
 
 <h3>File type registration</h3>
 
+
 Register Nemp as the default player for audio files and specify what to
-do with new files. "Enqueue" will add the new file to the last
+do with new files. "<span style="font-style: italic;">Enqueue</span>" will add the new file to the last
 playlist, otherwise the current playlist is cleared and the new file
 will be the only one in the playlist.<br>
 
+
 <br>
+
 
 <h3>Meta data (e.g. ID3-Tags)</h3>
 
+
 Nemp uses meta tags to store some information directly into the files,
-e.g. the user rating and the play counter. This will change the files
+e.g. the <span style="font-style: italic;">user rating</span> and the <span style="font-style: italic;">play counter</span>. This will change the files
 quite often, which may collide with your backup strategy. <br>
+
 
 <span style="font-style: italic;">Note 1: This setting is
 OPT-IN, and one of the Nemp wizard settings.</span><br style="font-style: italic;">
+
 
 <span style="font-style: italic;">Note 2: The file is
 definitely changed, when you use the "Properties" dialog to change the
 meta data.</span><br>
 
+
 <br>
 
+
 <h3>Cover</h3>
+
 
 While adding files to your library, Nemp will search for matching cover
 art for the audio files. Nemp will use the embedded cover art in the
 files and image files on your hard disk, if there are any. You can
 specify, where Nemp should scan for a matching cover art.<br>
 
+
 <br>
 
+
 <h3>Search options (extended settings)</h3>
+
 
 As almost everytime in computer science, you have the choice to do
 something fast (using a lot of memory), or to do it a bit slower (with
 less memory). <br>
 
+
 The Nemp quicksearch feature gives you the choice to adjust the memory
 usage.<br>
 
+
 <br>
+
 
 Recommended is the accelerated search, which will use approximately 1mb
 for 4000 files, maybe some more if you include filenames (recommended)
 and comments (often not useful).<br>
 
+
 <br>
+
 
 <span style="font-style: italic;">Note: If you exclude
 filenames, the files should contain proper meta data if you want to
 find them through the quicksearch.</span><br>
 
+
 <br>
 
+
 <span style="font-weight: bold;">Quicksearch options<br>
+
 
 </span>Nemp can give you proper search results in (almost) real
 time, "while you type". If you have many files in your library
 (&gt; 10.000 files), accelerated search is strongly recommended for
 this feature.<br>
+
 
 In addition, Nemp can do a fuzzy search to handle some typos (in your
 search query as well as in the media library). This will take a little
@@ -151,23 +203,30 @@ bit more time, so the fuzzy search is only done after hitting the enter
 key (default setting). If your PC is pretty fast, an on the fly fuzzy
 search may work as well.<br>
 
+
 <br>
+
 
 <span style="font-style: italic;">Tip: Fuzzy search is
 also useful for artists like Pink (or P!nk?) and Alanis Morissette (how
 many r, s, t are correct?).</span><br>
 
+
 <h3>Unicode (extended settings)</h3>
+
 
 Some mp3 files doesn't support unicode very well, and use corrupt char
 encoding. Nemp can try to guess the correct one by analyzing the
 filename: If a file is named with a lot of greek letters, it can be
 assumed that the information within the ID3-Tags is also in greek.<br>
 
+
 <span style="font-style: italic;">Tip: If you dont know
 what I'm talking about: Just ignore this setting. ;-)</span><br>
 
+
 <span style="font-style: italic;"><br>
+
 
 </span>
 </body>
