--- a/help/nemp_start.html
+++ b/help/nemp_start.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 
+
   
 
 
+  
+  
   
   <title>Nemp: Noch ein mp3-Player</title>
   <style title="" media="" type="text/css">
@@ -29,83 +34,124 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Nemp: Noch ein mp3-Player</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 
 Ein mp3-Player f&uuml;r Windows<br>
 
 
-Aktuelle Version: 4.5<br>
+
+Aktuelle Version: 4.6<br>
+
 
 
 <br>
+
 
 
 &copy; 2005-2012 Daniel 'Gausi' Gau&szlig;mann<br>
 
 
+
 www.gausi.de, mail@gausi.de<br>
+
 
 
 <br>
 
 
+
 <div style="text-align: left;"><img style="width: 155px; height: 112px;" alt="nemp" src="nemp.jpg"><br>
+
 
 
 </div>
 
 
+
 <h3><br>
-
-
 </h3>
+<h3>Neu in Version 4.6</h3>
+<ul style="list-style-type: circle;">
+  <li>Unterst&uuml;tzung f&uuml;r iTunes-Tags</li>
+  <li>Schnellerer Start der Wiedergabe (besonders bei Dateien auf Netzwerk-Laufwerken)</li>
+  <li>&Uuml;berarbeiteter Einstellungs-Dialog</li>
+  <li>Kleinere &Auml;nderungen am GUI</li>
+  <li>Diverse Bugfixes (*.cda in Medienbibliothek, Playnext bei sehr kurzen Titeln)</li>
+</ul>
+
 
 
 <h3>Neu in Version 4.5</h3>
+
 <ul style="list-style-type: circle;">
+
   <li>Unterst&uuml;tzung von Apev2-Tags</li>
+
   <li>A-B-Wiederholung</li>
+
   <li>&Uuml;berspringen von Stille am Ende eines Titels</li>
+
   <li>Auswerten der Meta-Information "CD-Nr." bzw. "Part of a Set" bei Multi-CD-Alben</li>
+
   <li>Optionen: Kein Splashscreen, Wechseln zu neu eingef&uuml;gtem Titel (bei Doppleklick im Explorer bei bereits laufendem Player)</li>
+
   <li>Laden der Bibliotheks-Datei im Hintergrund (schnellerer Start)</li>
+
   <li>Diverse &Auml;nderungen an der GUI<br>
+
   </li>
+
   <li>Diverse Bugfixes (Sortieren nach Dateiname/Ordner, "Kein Wiederholen", Trackermodul-Dateien)</li>
+
 </ul>
+
 <h3>Neu in Version 4.4 (Auszug)</h3>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>Stark &uuml;berarbeiteter Webserver: Positionsanzeige
@@ -118,12 +164,15 @@ Interpret, Album oder Genre, optionale Unterteilung zwischen usern und
 Administratoren</li>
 
 
+
   <li>Der Webserver ist &uuml;ber Themes (relativ) leicht den
 eigenen W&uuml;nschen entsprechend anpassbar.&nbsp;</li>
 
 
+
   <li>Neue Funktion: Kopfh&ouml;rer-Titel in Playlist
 einf&uuml;gen und ab aktueller Position abspielen</li>
+
 
 
   <li>&Auml;nderung: Drag&amp;Drop in die Playlist
@@ -131,19 +180,25 @@ f&uuml;gt die Dateien hinter den markierten Titel ein, nicht mehr
 davor</li>
 
 
+
 </ul>
+
 
 
 <h3>Neu in Version 4.3 (Auszug)</h3>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>Bessere Unterst&uuml;tzung von CD-Audio<br>
 
 
+
   </li>
+
 
 
   <li>Funktion "Medienbibliothek aufr&auml;umen" erweitert
@@ -152,31 +207,40 @@ Auswahl, ob fehlenden Dateien auf nicht verf&uuml;gbaren Laufwerken
 doch behalten werden sollen)</li>
 
 
+
   <li>neue bass_fx-Version. dann klappts auch mit Windows 8</li>
+
 
 
   <li>Umstellung auf die neue Scrobble-API</li>
 
 
+
 </ul>
+
 
 
 <h3>Neu in Version 4.2 (Auszug)</h3>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>Multimediatasten sollten jetzt endlich vern&uuml;nftig
 funktionieren</li>
 
 
+
   <li>Strg+V f&uuml;gt Dateien in der Playlist jetzt an der
 markierten Stelle ein</li>
 
 
+
   <li>Wizard hinzugef&uuml;gt, der einige grundlegende
 Einstellungen abfragt</li>
+
 
 
   <li>Alles, was im Hintergrund passiert und Musikdateien
@@ -187,27 +251,35 @@ Opt-In, d.h. es muss explizit erlaubt werden. Genau diese Dinge fragt
 der Wizard ab.</li>
 
 
+
 </ul>
+
 
 
 <h3>Neu in Version 4.1 (Auszug)</h3>
 
 
+
 <ul style="list-style-type: circle;">
 
 
+
   <li>Unterst&uuml;tzung von Ogg- und Flac-Tags</li>
+
 
 
   <li>Kopieren der Playlist inklusiver passender m3u-Datei durch
 Strg+Shift+C</li>
 
 
+
   <li>Funktion "Playlist in Verzeichnis kopieren" (z.B. auf einen
 USB-Stick) mit Umbenennung der Dateien</li>
 
 
+
   <li>Push-To-Talk durch F8 (&auml;hnlich der Jingles)</li>
+
 
 
   <li>Unterst&uuml;tzung f&uuml;r das Display der
@@ -217,42 +289,55 @@ jemand machen
 m&ouml;chte)</li>
 
 
+
 </ul>
+
 
 
 <h3>Neu in Version 4.0 (Auszug)</h3>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>Sch&ouml;nerer Coverflow mit automatischem
 Cover-Download</li>
 
 
+
   <li>Browsemodus "Tagwolke"</li>
+
 
 
   <li>Einfachere Bearbeitung der mp3-Dateien</li>
 
 
+
   <li>Unterst&uuml;tzung f&uuml;r Windows 7</li>
+
 
 
   <li>Partymodus mit vergr&ouml;&szlig;erter Ansicht und
 reduzierten Funktionen</li>
 
 
+
   <li>Vormerk-Liste f&uuml;r die Playlist</li>
+
 
 
   <li>...</li>
 
 
+
 </ul>
 
 
+
 <br>
+
 
 
 </body>
