--- a/help/scrobbeln.html
+++ b/help/scrobbeln.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Scrobbeln mit Nemp</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,49 +31,71 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Scrobbeln mit Nemp</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 Scrobbeln ist eine Erfindung von last.fm - einem sozialen Netzwerk im
 Internet mit dem Schwerpunkt auf Musik. Scrobbeln bedeutet, dass das,
 was Sie gerade h&ouml;ren, in Ihrem Benutzerprofil auf dieser Seite
-auftaucht. &Uuml;ber die Lieder, die Sie im Laufe der zeit h&ouml;ren,
+auftaucht. &Uuml;ber die Lieder, die Sie im Laufe der Zeit h&ouml;ren,
 kristallisiert sich ein Musikgeschmack heraus, und Sie k&ouml;nnen
 &uuml;ber dieses Netzwerk Leute mit &auml;hnlichem Musikgeschmack
 finden und kennenlernen.<br>
+
 <br>
+
 Nemp kann scrobbeln.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Scrobbler konfigurieren</span><br>
-Zuerst m&uuml;ssen Sie Nemp den Zugriff auf Ihr last.fm-Nutzerprofil
+
+Zuerst m&uuml;ssen Sie Nemp den Zugriff auf Ihr&nbsp;last.fm-Nutzerprofil
 erlauben. Rufen Sie dazu den Einstellungsdialog auf starten Sie die
 Konfiguration.<br>
+
 <ol>
+
   <li>Online gehen und auf "Weiter" klicken. Nemp fordert bei last.fm
 ein so genanntes Token an, das im weiteren Verlauf f&uuml;r die
 Authentifizierung ben&ouml;tigt wird.</li>
+
   <li>Klicken Sie erneut auf "Weiter". Sie werden dann in Ihrem Browser
-auf last.fm geschickt, wo Sie sich anmelden m&uuml;ssen. Nach der
+auf&nbsp;last.fmgeschickt, wo Sie sich anmelden m&uuml;ssen. Nach der
 Anmeldung werden Sie auf eine Seite weitergeleitet, auf der das
 Nemp-Logo zu sehen ist. Klicken Sie dort auf "Zugriff erlauben" und
 wechseln Sie zur&uuml;ck zu Nemp.</li>
+
   <li>Klicken Sie noch einmal auf "Weiter" (und direkt nocheinmal).
 Nemp kann jetzt mit Hilfe des Tokens, das sie durch den Klick auf den
 "Zulassen"-Button auf der Webseite mit Ihrem Account verkn&uuml;pft
@@ -76,44 +103,69 @@ haben, von last.fm Ihren Nutzernamen und einen "Sessionkey" abrufen.
 Dieser Key wird (leicht verschl&uuml;sselt) in der
 Nemp-Konfigurationsdatei gespeichert und wird f&uuml;r das Scrobbeln
 ben&ouml;tigt.</li>
+
 </ol>
+
 <span style="font-weight: bold;"><br>
+
 Scrobbler aktivieren</span><br>
+
 Setzen Sie bei den Scrobbel-Einstellungen &nbsp;unter "Diese Sitzung
 scrobbeln" ein H&auml;kchen und klicken unten auf "&Uuml;bernehmen".
 Wenn Sie grunds&auml;tzlich immer scrobbeln wollen, setzen Sie auch ein
 H&auml;kchen bei "Immer scrobbeln".<br>
+
 Wenn das scrobbbeln aktiviert ist, wird im Hauptfenster ein
 Symbol <img style="width: 16px; height: 16px;" src="scrobbler.png" alt="">&nbsp;eingeblendet. <br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Was wird gescrobbelt?</span><br>
+
 Das scrobbeln l&auml;uft in zwei Phasen ab. <br>
+
 <ul style="list-style-type: circle;">
+
   <li>Die "Now-Playing"-Nachricht. Diese wird beim Start eines neuen
 Titels abgesetzt. In Ihrem Profil erscheint dann "h&ouml;rt gerade
 &lt;aktueller Titel&gt;".</li>
+
   <li>Die "Submission"-Nachricht. Diese wird am Ende eines Titels
 gesendet, wenn mindestens 50% oder 4 Minuten des Titels abgespielt
 wurden. Zu kurze Titel (weniger als 30 Sekunden) werden generell nicht
 gescrobbelt. Diese Titel erscheinen dann in der History in Ihrem
 Nutzerprofil.</li>
+
 </ul>
+
 <span style="font-weight: bold;"><br>
+
 Fehler beheben</span><br>
+
 Es kann manchmal zu Fehlern beim scrobbeln kommen. Nemp beendet dann
 das scrobbeln um den Dienst nicht unn&ouml;tig zu belasten.
 M&ouml;gliche Fehlerquellen sind<br>
+
 <ul style="list-style-type: circle;">
+
   <li>Fehlende Internetverbindung</li>
+
   <li>Eine Firewall blockiert die Kommunikation von Nemp mit last.fm</li>
+
   <li>Der Sessionkey ist ung&uuml;ltig. Dann m&uuml;ssen Sie die Konfigurationsschritte 1.) bis 3.) erneut durchf&uuml;hren</li>
+
   <li>Ihr Account ist gesperrt. Wenden Sie sich an last.fm</li>
+
 </ul>
+
 Wenn Sie glauben, dass Sie die Fehlerursache beseitigt haben,
 k&ouml;nnen Sie durch Klick auf "Wieder scrobbeln" einen neuen Versuch
 starten.<br>
+
 <br>
+
 
 </body>
 </html>
